--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Dave Rolsky <autarch@urth.org>'
 build_requires:
   Module::Build: 0.3601
+  Test::Fatal: 0
   Test::More: 0.88
 configure_requires:
   Module::Build: 0.3601
@@ -19,4 +20,4 @@ requires:
 resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Class-Load-XS
   repository: git://git.urth.org/Class-Load-XS.git
-version: 0.02
+version: 0.03
