--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
 copyright_holder = Dave Rolsky
 
-version = 0.02
+version = 0.03
 
 [NextRelease]
 format = %-8v %{yyyy-MM-dd}d
@@ -44,6 +44,7 @@ repository.type   = git
 Class::Load = 0.11
 
 [Prereqs / TestRequires]
-Test::More = 0.88
+Test::Fatal = 0
+Test::More  = 0.88
 
 [@Git]
