--- a/META.yml
+++ b/META.yml
@@ -3,21 +3,29 @@ abstract: 'XS implementation of parts of Class::Load'
 author:
   - 'Dave Rolsky <autarch@urth.org>'
 build_requires:
+  Class::Load: 0
   Module::Build: 0.3601
+  Module::Implementation: 0.04
   Test::Fatal: 0
   Test::More: 0.88
+  Test::Requires: 0
+  constant: 0
+  version: 0
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300002, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Dist::Zilla version 4.300006, CPAN::Meta::Converter version 2.113640'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Class-Load-XS
 requires:
-  Class::Load: 0.11
+  Class::Load: 0.15
+  XSLoader: 0
+  strict: 0
+  warnings: 0
 resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Class-Load-XS
   repository: git://git.urth.org/Class-Load-XS.git
-version: 0.03
+version: 0.04
