--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
 copyright_holder = Dave Rolsky
 
-version = 0.03
+version = 0.04
 
 [NextRelease]
 format = %-8v %{yyyy-MM-dd}d
@@ -32,19 +32,19 @@ repository.type   = git
 [PkgVersion]
 
 [EOLTests]
+[NoTabsTests]
 [PodSyntaxTests]
+[Test::CPAN::Changes]
 [Test::Pod::LinkCheck]
 [Test::Pod::No404s]
-[NoTabsTests]
-[Test::CPAN::Changes]
 
 [CheckChangeLog]
 
-[Prereqs]
-Class::Load = 0.11
+[AutoPrereqs]
+skip = Test::Spelling
+skip = Test::Without::Module
 
-[Prereqs / TestRequires]
-Test::Fatal = 0
-Test::More  = 0.88
+[Prereqs]
+Class::Load = 0.15
 
 [@Git]
