--- a/dist.ini
+++ b/dist.ini
@@ -2,46 +2,29 @@ name    = Class-Load-XS
 author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
 copyright_holder = Dave Rolsky
-
-version = 0.06
-
-[NextRelease]
-format = %-8v %{yyyy-MM-dd}d
-
-[@Filter]
--bundle = @Basic
--remove = MakeMaker
-
-[ModuleBuild]
-
-[PruneFiles]
-filenames = Build.PL
-
-[InstallGuide]
-[MetaJSON]
-
-[MetaResources]
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Class-Load-XS
-bugtracker.mailto = bug-class-load-xs@rt.cpan.org
-repository.url    = git://git.urth.org/Class-Load-XS.git
-repository.web    = http://git.urth.org/Class-Load-XS.git
-repository.type   = git
+copyright_year = 2011
 
 [SurgicalPodWeaver]
 
-[PkgVersion]
+[PPPort]
 
-[EOLTests]
-[NoTabsTests]
-[PodSyntaxTests]
-[Test::CPAN::Changes]
-[Test::Pod::LinkCheck]
-[Test::Pod::No404s]
+[PruneFiles]
+filenames = Makefile.PL
 
-[CheckChangeLog]
+[MetaResources]
+x_IRC = irc://irc.perl.org/#moose
+x_MailingList = http://lists.perl.org/list/moose.html
 
-[AutoPrereqs]
-skip = Test::Spelling
-skip = Test::Without::Module
+[@Author::ETHER]
+installer = MakeMaker
+installer = ModuleBuildTiny
+Authority.authority = cpan:SARTAK
+NextRelease.format = %-8v %{yyyy-MM-dd}d
+-remove = PodWeaver
+AutoPrereqs.skip = Test::Without::Module
 
-[@Git]
+[Prereqs / DevelopRequires]
+Test::Without::Module = 0
+ExtUtils::MakeMaker::Dist::Zilla::Develop = 0
+
+[ContributorsFromGit]
