Import of ETHER/Class-Load-XS-0.09.tar.gz from CPAN.
gitpan-cpan-distribution: Class-Load-XS
gitpan-cpan-version:      0.09
gitpan-cpan-path:         ETHER/Class-Load-XS-0.09.tar.gz
gitpan-cpan-author:       ETHER
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -4,8 +4,6 @@ license = Artistic_2_0
 copyright_holder = Dave Rolsky
 copyright_year = 2011
 
-[SurgicalPodWeaver]
-
 [PPPort]
 
 [MetaResources]
@@ -13,16 +11,19 @@ x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://lists.perl.org/list/moose.html
 
 [@Author::ETHER]
+:version = 0.076
 installer = MakeMaker
+copy_file_from_release = ppport.h
+surgical_podweaver = 1
 Authority.authority = cpan:SARTAK
 NextRelease.format = %-8v %{yyyy-MM-dd}d
--remove = PodWeaver
 AutoPrereqs.skip = Test::Without::Module
-Git::GatherDir.exclude_filename[0] = Makefile.PL
-Git::GatherDir.exclude_filename[1] = ppport.h
+Test::MinimumVersion.max_target_perl = 5.006
+Git::GatherDir.exclude_match = ^inc/
 
 [Prereqs / DevelopRequires]
 Test::Without::Module = 0
-ExtUtils::MakeMaker::Dist::Zilla::Develop = 0
 
-[ContributorsFromGit]
+; authordep Pod::Weaver::Section::Contributors
+
+[Test::CleanNamespaces]
